# tacklebox

./: .env.example  .gitignore  LICENSE  README.md  TESTING.md  Tacklebox-architecture.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_indexes.py
grafana/dashboards/: tacklebox.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: postgres.yml
src/tacklebox/: config.py  db.py  main.py  models.py  schemas.py  utils.py
src/tacklebox/routes/: context.py  hooks_session.py  hooks_stop.py  hooks_tools.py  sessions.py
src/tacklebox/services/: audit.py  context.py  coordination.py  responses.py
tests/: conftest.py  test_context_api.py  test_context_injection.py  test_fail_open.py  test_file_lock.py  test_instructions_and_config.py  test_pre_tool_use.py  test_session_lifecycle.py  test_stop_handler.py
