[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tacklebox"
version = "0.1.0"
description = "FastAPI + PostgreSQL + Grafana server for Claude Code hook events"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "coverage>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tacklebox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = ["anyio: mark test as async"]
